x2goclient (4.0.1.0-0~x2go1) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * New upstream version (4.0.1.0):
    - More icon updates needed. Discovered during Debian package update.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.0):
    - Fix support for RSA Keys in X2Go Broker code.
    - Set autologin as false by default. Quote session ID in SSH broker code

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 30 Dec 2012 15:41:04 +0100

x2goclient (4.0.0.1-0~x2go1) unstable; urgency=low

  * Bugfix release (4.0.0.1):
    - Replace symlink at svg/x2gologo.svg with copied file. Fixes
      tarball release esp. for MS Windows builds.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 02 Jan 2013 12:19:01 +0100

x2goclient (4.0.0.0-0~x2go1) unstable; urgency=low

  [ Christoffer Krakou ]
  * New upstream version (4.0.0.0):
    - Update Danish translation.
    - Update Danish translation (SSH proxy feature).

  [ Daniel Lindgren ]
  * New upstream version (4.0.0.0):
    - Update Swedish translation.

  [ Ezra Bühler ]
  * New upstream version (4.0.0.0):
    - Make it possible to resume a session using the keyboard only.
      Also fix the tab order in the resume session dialog by
      changing the focus policy of the main window. (Fixes: #80).

  [ Heinz-M. Graesing ]
  * New upstream version (4.0.0.0):
    - Update refurbished X2Go Logo set. License for the X2Go Logos is GPL-2.0+.
      The inner X2Go logo background is now white (non-transparent) which should
      fix poor display results for X2Go icons in application menus using a dark
      theme. (Fixes: #59).

  [ Jan Engelhardt ]
  * New upstream version (4.0.0.0):
    - Fix Debian-like Qt path (qmake will handle it internally).

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.0.0):
    - Translation files updated.
    - Russian translation updated.
    - Add support for pgp cards in broker mode.
    - Fix displaying ssh proxy box in session settings if sessions type