@@ -8,6 +8,8 @@ x2goclient (4.0.1.0-0~x2go1) UNRELEASED; urgency=low
   * New upstream version (4.0.1.0):
     - Fix support for RSA Keys in X2Go Broker code.
     - Set autologin as false by default. Quote session ID in SSH broker code
+    - support for session key "usebrokerpassforproxy" - use broker pass for
+      authentication on proxy
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 30 Dec 2012 15:41:04 +0100
 
